--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 /* BOXES / ROWS */
 
+#container {
+  max-width: 900px;
+  min-width: 900px;
+  min-height: 600px;
+  max-height: 600px;
+}
+
 .row {
-  height: 100px;
+  height: 5rem;
   width: 100%;
   margin-top: 0.75%;
   background-color: #060606;
