--- a/ev02/style.css
+++ b/ev02/style.css
@@ -30,8 +30,8 @@ body {
 .top {
   height: 100% !important;
   margin-top: 0% !important;
-  /* background-color: transparent !important; */
-  /* color: silver; */
+  background-color: transparent !important;
+  color: silver;
 }
 
 .box {
