--- a/ev02/style.css
+++ b/ev02/style.css
@@ -1,5 +1,3 @@
-/* BOXES / ROWS */
-
 body {
   font-family: "Yantramanav", sans-serif;
   font-weight: 900;
@@ -10,6 +8,17 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+h1 {
+  color: rgba(107, 107, 107);
+}
+
+#blurb {
+  color: rgba(107, 107, 107, 0.666);
+  width: 20%;
+}
+
+/* BOXES / ROWS */
 
 #container {
   max-width: 900px;
