--- a/ev02/style.css
+++ b/ev02/style.css
@@ -15,7 +15,16 @@ h1 {
 
 #blurb {
   color: rgba(107, 107, 107, 0.666);
-  width: 20%;
+  position: absolute;
+  text-align: right;
+  width: 30%;
+  top: 2%;
+  right: 4%;
+  background-image: linear-gradient(#161616, #060606);
+  padding-right: 2%;
+  padding-left: 2%;
+  padding-bottom: 2%;
+  border: 5px solid rgba(107, 107, 107, 0.333);
 }
 
 /* BOXES / ROWS */
