--- a/ev02/style.css
+++ b/ev02/style.css
@@ -13,7 +13,7 @@ h1 {
   color: rgba(107, 107, 107);
 }
 
-#blurb {
+#about {
   color: rgba(107, 107, 107, 0.666);
   position: absolute;
   text-align: right;
@@ -22,7 +22,22 @@ h1 {
   right: 4%;
   background-image: linear-gradient(#161616, #060606);
   padding-right: 2%;
-  padding-left: 2%;
+  padding-left: 1.5%;
+  padding-bottom: 2%;
+  border: 5px solid rgba(107, 107, 107, 0.333);
+}
+
+#blurb {
+  visibility: hidden;
+  color: rgba(107, 107, 107, 0.666);
+  position: absolute;
+  text-align: right;
+  width: 30%;
+  top: 2%;
+  right: 4%;
+  background-image: linear-gradient(#161616, #060606);
+  padding-right: 2%;
+  padding-left: 1.5%;
   padding-bottom: 2%;
   border: 5px solid rgba(107, 107, 107, 0.333);
 }
