--- a/ev02/style.css
+++ b/ev02/style.css
@@ -15,15 +15,12 @@ h1 {
 
 #about {
   color: rgba(107, 107, 107, 0.666);
-  position: absolute;
-  text-align: right;
-  width: 30%;
+  position: fixed;
   top: 2%;
-  right: 4%;
-  background-image: linear-gradient(#161616, #060606);
+  right: 2%;
+  padding-left: 2%;
   padding-right: 2%;
-  padding-left: 1.5%;
-  padding-bottom: 2%;
+  background-image: linear-gradient(#161616, #060606);
   border: 5px solid rgba(107, 107, 107, 0.333);
 }
 
