--- a/ev02/style.css
+++ b/ev02/style.css
@@ -110,3 +110,22 @@ h1 {
 .complete {
   background-color: rgba(0, 107, 0, 0.666);
 }
+
+/* DEMO PALETTE 1
+
+- COLOURFUL -
+
+#A6587C - PURPLE
+#0C0C0D - BLACK
+#7580BF - BABY BLUE
+#F2EC94 - YELLOW
+#F28157 - ORANGE
+
+#0C0C0D - BLACK
+#242426 - GREY
+#7580BF - BABY BLUE
+#F28157 - ORANGE
+#F27457 - DEEP ORANGE
+
+
+*/
