--- a/ev02/style.css
+++ b/ev02/style.css
@@ -111,21 +111,12 @@ h1 {
   background-color: rgba(0, 107, 0, 0.666);
 }
 
-/* DEMO PALETTE 1
+/* PALETTE II
 
-- COLOURFUL -
-
-#A6587C - PURPLE
-#0C0C0D - BLACK
-#7580BF - BABY BLUE
-#F2EC94 - YELLOW
-#F28157 - ORANGE
-
-#0C0C0D - BLACK
-#242426 - GREY
-#7580BF - BABY BLUE
-#F28157 - ORANGE
-#F27457 - DEEP ORANGE
-
+#272727 - OFF BLACK
+#F3EFE0 - EGGSHELL
+#D93D1A - RED
+#F2BF80 - SAND
+#7284A8 - BLUE
 
 */
