--- a/ev02/style.css
+++ b/ev02/style.css
@@ -113,10 +113,9 @@ h1 {
 
 /* PALETTE II
 
-#272727 - OFF BLACK
+#272727 - EERIE BLACK
 #F3EFE0 - EGGSHELL
-#D93D1A - RED
-#F2BF80 - SAND
-#7284A8 - BLUE
+#D93D1A - VERMILLION
+#7284A8 - SHADOW BLUE
 
 */
