--- a/ev02/style.css
+++ b/ev02/style.css
@@ -25,7 +25,7 @@ h1 {
   padding-left: 2%;
   padding-right: 2%;
   background-image: linear-gradient(#161616, #060606);
-  border: 5px solid rgba(107, 107, 107, 0.333);
+  border: 5px solid #272727;
 }
 
 #about:hover {
@@ -67,7 +67,7 @@ h1 {
   height: 3.5rem;
   width: 100%;
   margin-top: 0.75%;
-  background-color: #161616;
+  background-color: #272727;
   transform: skew(-6deg);
 }
 
@@ -75,7 +75,7 @@ h1 {
   height: 100% !important;
   margin-top: 0% !important;
   background-color: transparent !important;
-  color: silver;
+  color: #f3efe0;
 }
 
 .box {
@@ -90,7 +90,7 @@ h1 {
   margin-top: 0.89%;
   margin-left: 0.94%;
   margin-right: 0.75%;
-  background-color: silver;
+  background-color: #f3efe0;
 }
 
 /* STATUS */
@@ -100,15 +100,15 @@ h1 {
 }
 
 .pre {
-  background-color: rgba(107, 107, 107, 0.666);
+  background-color: #f3efe0;
 }
 
 .in-progress {
-  background-color: rgba(107, 0, 0, 0.666);
+  background-color: #d93d1a;
 }
 
 .complete {
-  background-color: rgba(0, 107, 0, 0.666);
+  background-color: #7284a8;
 }
 
 /* PALETTE II
